--- a/hypertrend-frontend/src/index.css
+++ b/hypertrend-frontend/src/index.css
@@ -4,6 +4,16 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
+   /* This is used to fix the scroll bar pop up messing with the layout During Modal Interaction */
+    body[data-scroll-locked][data-scroll-locked] {
+      overflow: auto !important;
+    }
+    body[data-scroll-locked] {
+      margin-right: 0 !important;
+    }
+  }
+
+:root {
   font-family: Inter,sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -51,15 +61,6 @@
   --sidebar-border: oklch(0.929 0.013 255.508);
   --sidebar-ring: oklch(0.704 0.04 256.788);
 }
-
-/* a { */
-  /* font-weight: 500; */
-  /* color: #646cff; */
-  /* text-decoration: inherit; */
-/* } */
-/* a:hover { */
-  /* color: #535bf2; */
-/* } */
 
 body {
   margin: 0;
